[gd_scene load_steps=5 format=3 uid="uid://cssibkyc0xmx0"]

[ext_resource type="Script" uid="uid://daf5yays68nx8" path="res://scenes/current.gd" id="1_e1fhf"]
[ext_resource type="PackedScene" uid="uid://d065p5o36w0un" path="res://scenes/FX_WaterStream.tscn" id="2_gshle"]
[ext_resource type="AudioStream" uid="uid://eulsgv864jtk" path="res://assets/audio/mantiscrab_swoosh.ogg" id="3_a75po"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_p167u"]
height = 13.557
radius = 1.26355

[node name="Current_Area" type="Area3D"]
script = ExtResource("1_e1fhf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_p167u")

[node name="FxWaterStream" parent="." instance=ExtResource("2_gshle")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.93205, 0, 0)

[node name="Stream_End" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.7717, 0, 0)

[node name="CurrentAudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_a75po")
volume_db = 80.0
unit_size = 67.09
max_db = 6.0
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
